--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-﻿# Сборочные артефакты .NET
-bin/
+﻿bin/
 obj/
 *.csproj.user
 *.suo
@@ -7,35 +6,29 @@ obj/
 *.userosscache
 *.sln.docstates
 
-# Временные файлы Visual Studio
 .vscode/
 .vs/
 *.code-workspace
 
-# Пакеты NuGet
 packages/
 *.nupkg
 
-# Логи и временные файлы
 *.log
 *.tmp
 *.temp
 
-# Файлы конфигурации с чувствительными данными
+rpc_log.txt
+
 appsettings.json
 secrets.json
 *.env
 
-# Файл кошельков (содержит зашифрованные приватные ключи)
 wallets.json
 
-# Кэш и другие системные файлы
 .DS_Store
 Thumbs.db
 
-# Диагностические файлы
 *.pdb
 *.cache
 
-# Локальные тесты и эксперименты
 TestResults/
