--- a/CryptoWallet.csproj
+++ b/CryptoWallet.csproj
@@ -6,8 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="NBitcoin" Version="8.0.8" />
     <PackageReference Include="Nethereum.Web3" Version="4.20.0" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.119" />
     <PackageReference Include="System.Net.Http.Json" Version="9.0.0-preview.3.24172.9" />
   </ItemGroup>
   <ItemGroup>
